# predict-epl-match-winner

./: .coverage  .coverage.Sid-Home-MBP.local.21522.XBiQFyPx  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
notebooks/: pipeline.ipynb
notebooks/.ipynb_checkpoints/: pipeline-checkpoint.ipynb
scripts/: make_coverage_badge.py
src/pemw/: cli.py  data.py  features.py  gcs_utils.py  model.py  vertex.py
src/pemw/ui/: app.py
src/predict_epl_match_winner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_cli_upload.py  test_data.py  test_data_exceptions.py  test_features.py  test_features_missing_scores.py  test_hgb_tuning_and_pruning.py  test_model.py  test_model_hgb.py  test_model_missing_features.py  test_model_selection.py  test_model_train_eval.py  test_tune_and_features.py  test_vertex.py
tests/data_samples/: tiny_E0.csv
