[project]
name = "predict-epl-match-winner"
version = "0.1.0"
description = "Predict EPL match winner locally with Streamlit UI, using 20 years of data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "requests>=2.32.3",
  "joblib>=1.4.2",
  "streamlit>=1.36.0",
  "pyarrow>=17.0.0"
]

[project.scripts]
pemw = "pemw.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest>=8.3.1",
  "pytest-cov>=5.0.0",
  # Pin ruff to align local & CI to avoid version drift causing style diffs
  "ruff==0.12.9",
  "mypy>=1.11.1",
  "types-requests>=2.32.0.20240712",
  "pandas-stubs>=2.2.2.240603",
  "pre-commit>=3.8.0",
  "black>=24.8.0",
  "genbadge[coverage]>=1.1.1",
  # isort removed: Ruff handles import sorting
]
# Optional extra kept for compatibility with pip install .[dev]
[project.optional-dependencies]
dev = ["pytest>=8.3.1","pytest-cov>=5.0.0","ruff==0.12.9","mypy>=1.11.1","types-requests>=2.32.0.20240712","pandas-stubs>=2.2.2.240603","pre-commit>=3.8.0","black>=24.8.0","genbadge[coverage]>=1.1.1"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
